# mobileLLM_demo

./: .env.example  .gitignore  ChatInterface.css  ChatInterface.js  Dockerfile.api  Dockerfile.llm  Dockerfile.mcp  README.md  api.py  config.js  config.yaml  docker-compose.yml  index.html  index.js  llm_api.py  mcp_manager.py  package-lock.json  package.json  pyproject.toml  test_endpoint.py
.github/workflows/: docker-build.yml
.parcel-cache/: 36148736bc954cab-BundleGraph  b2fd75c1aa4796fc-AssetGraph  c8503be824d6c0b2-AssetGraph  eabdf8a4e0c8462b-RequestGraph  lock.mdb  snapshot-eabdf8a4e0c8462b.txt
mcp_server/: TOOLS_README.md  mcp_api.py  mcp_server.py
mcp_server/tools/calculate_average/: handler.py
mcp_server/tools/calculations/calculate_average/: schema.json
mcp_server/tools/calculations/get_product/: handler.py  schema.json
mcp_server/tools/file_operations/append_file/: handler.py  schema.json
mcp_server/tools/file_operations/delete_path/: handler.py  schema.json
mcp_server/tools/file_operations/list_directory/: handler.py  schema.json
mcp_server/tools/file_operations/read_file/: handler.py  schema.json
mcp_server/tools/file_operations/run_command/: handler.py  schema.json
mcp_server/tools/file_operations/write_file/: handler.py  schema.json
mcp_server/tools/get_sum/: handler.py  schema.json
