[project]
name = "i3-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.0",
  "uvicorn==0.40.0",
  "pydantic==2.12.5",
  "httpx==0.28.1",
  "pyyaml==6.0.3",
  "python-dotenv==1.2.1",
  "langchain==1.2.6",
  "langchain-openai==1.1.7",
  "langgraph==1.0.6",
  "mcp==1.25.0",
  "nest_asyncio==1.5.6",
]
